--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Solway:wght@300;400;500;700;800&display=swap');
 
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+h1, h2 {
+  font-family: 'Solway', serif;
 }
 
 .logo {
